@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-18T16:17:56Z",
+  "timestamp" : "2022-07-19T08:15:07Z",
   "count_outdated" : 399,
   "uniques_outdated" : 217,
-  "count" : 424,
+  "count" : 423,
   "uniques" : 229,
   "clones" : [
     {
       "timestamp": "2022-07-05T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
